GNOME Bugzilla – Bug 708184
--pause option doesn't work when launched the first time
Last modified: 2014-03-28 00:17:42 UTC
To reproduce, without any instance of Totem running: - open the terminal - launch "totem --pause /path/to/file" Expected: - /path/to/file is in the playlist, in a paused state Actual: - /path/to/file is in the playlist, already playing Patch attached.
Created attachment 255065 [details] [review] Add support for starting a playlist paused Currently, when --pause is specified in the first command line invocation of Totem, the passed-in media will still start. This patch saves the initial state of the pause option to a separate variable, so that when we receive the first playlist changed event, we can avoid starting up the stream if the option was specified.
Created attachment 255066 [details] [review] Add support for starting a playlist paused -- Same patch against the gnome-3-8 branch.
Review of attachment 255065 [details] [review]: There's a libgd change in that patch. ::: src/totem-object.c @@ +2904,3 @@ totem_object_set_mrl_and_play (totem, mrl, subtitle); + if (totem->pause_start) + totem_object_pause (totem); It shouldn't start playing instead, rather than starting to play and then pausing. There's code that does that in totem master, to handle session restore.
Review of attachment 255066 [details] [review]: Much better :) Please commit to gnome-3-8 and gnome-3-10 after the 3.10 release next week.
The patches don't apply anymore. Any chance for you to update them?
Created attachment 273128 [details] [review] main: Add support for starting a playlist paused Currently, when --pause is specified in the first command line invocation of Totem, the passed-in media will still start. This patch saves the initial state of the pause option to a separate variable, so that when we receive the first playlist changed event, we can avoid starting up the stream if the option was specified.
Attachment 273128 [details] pushed as f22f8dd - main: Add support for starting a playlist paused